--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <!-- Write your HTML code here, you can delete everything withing the body tags -->
-  <div id="contain" class="container-fluid d-flex h-100">
+  <div id="contain" class="container-fluid d-flex h-auto">
   
   </div>
   <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
